tests/getters_and_setters_disabled/getters_and_setters_disabled.exp
Error: getters_and_setters.js:6
  6:   get a() { return 4; },
       ^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:7
  7:   set b(x: number) { this.c = x; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:9
  9:   get ['d']() { return 'foo'; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: getters_and_setters.js:10
 10:   set ['d'](x: number) {},
       ^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: getters_and_setters.js:11
 11:   set "stringLiteral"(x: number) { },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:12
 12:   get "stringLiteral"(): number { return 4; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:16
 16:   get a(): number,
       ^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:17
 17:   set b(x: number): void,
       ^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:22
 22:   get a(): number;
       ^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:23
 23:   set b(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:28
 28:   get a() { return 4; }
       ^^^^^^^^^^^^^^^^^^^^^ Potentially unsafe get/set usage. Getters and setters with side effects are potentially unsafe and disabled by default. You may opt-in to using them anyway by putting `unsafe.enable_getters_and_setters=true` into the [options] section of your .flowconfig.

Error: getters_and_setters.js:29
 29:   set b(x: number) { this.c = x; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Potentially unsafe get/set usage. Getters and setters with side effects are potentially unsafe and disabled by default. You may opt-in to using them anyway by putting `unsafe.enable_getters_and_setters=true` into the [options] section of your .flowconfig.

Error: getters_and_setters.js:31
 31:   get ['d']() { return 'foo'; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported

Error: getters_and_setters.js:32
 32:   set ['d'](x: number) {}
       ^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported


Found 14 errors
